--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Shut Up And Take My Money!</title>
+    <meta property="og:image" content="https://shutup.andtakemy.money/suatmm-logo.png" />
     <style type="text/css">
         div {
             position: relative;
