--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
     <title>Shut Up And Take My Money!</title>
     <meta property="og:image" content="https://shutup.andtakemy.money/suatmm-logo.png" />
     <style type="text/css">
-        div {
-            position: relative;
-            height: 640px;
-        }
-        img {
-            position: absolute;
-            margin: auto;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
+        .footer {
+          position: fixed;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          background-color: #D3D3D3;
+          color: white;
+          text-align: center;
+          font-family: monospace;
+          padding: 0.5em;
         }
     </style>
 </head>
 <body>
-    <div>
-        <img src="/suatmm-logo.png">
+    <div class="content">
+        <img src="suatmm-logo.png">
     </div>
+    <footer class="footer">This useful website is brought to you by vmdude</footer>
 </body>
 </html>
