align center img

--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
     <title>Shut Up And Take My Money!</title>
     <meta property="og:image" content="https://shutup.andtakemy.money/suatmm-logo.png" />
     <style type="text/css">
+        .content {
+            position: relative;
+            height: 640px;
+        }
+        #logo {
+            position: absolute;
+            margin: auto;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+        }
         .footer {
           position: fixed;
           left: 0;
@@ -18,7 +30,7 @@
 </head>
 <body>
     <div class="content">
-        <img src="suatmm-logo.png">
+        <img id="logo" src="https://shutup.andtakemy.money/suatmm-logo.png">
     </div>
     <footer class="footer">This useful website is brought to you by vmdude</footer>
 </body>
